Add match confirmation
